# tagged-box

./: Cargo.toml  Changelog.md  LICENSE  LICENSE-MIT  Makefile.toml  README.md  build.rs
benches/: tagged_box.rs
src/: discriminant.rs  lib.rs  manually_impl_enum.rs  taggable.rs  tagged_box.rs  tagged_box_macro.rs  tagged_pointer.rs
src/tagged_box_macro/: meta_macros.rs  mod.rs
tests/: tagged_box_macro.rs
