[package]
name = "tagged-box"
version = "0.1.1"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
description = "An implementation of Box that uses tagged pointers"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Kixiron/tagged-box"
repository = "https://github.com/Kixiron/tagged-box"
readme = "README.md"
keywords = ["nanbox", "tagged-pointers", "pointers", "tagged-enum"]
categories = ["no-std", "embedded"]

[features]
default = ["48bits"]
48bits = []
49bits = []
50bits = []
51bits = []
52bits = []
53bits = []
54bits = []
55bits = []
56bits = []
57bits = []
